deploy/manifests/stunner-gateway-operator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stunner-gateway-operator
  namespace: stunner-system
spec:
  selector:
    control-plane: controller-manager
  ports:
  - port: 13478
    protocol: TCP
