deploy/manifests/stunner-turn.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: stunner-gatewayclass
spec:
  controllerName: "stunner.l7mp.io/gateway-operator"
  parametersRef:
    group: "stunner.l7mp.io"
    kind: GatewayConfig
    name: stunner-gatewayconfig
    namespace: stunner
  description: "STUNner is a WebRTC ingress gateway for Kubernetes"
---

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: turn-server-udp
  namespace: stunner
  annotations:
    stunner.l7mp.io/enable-relay-address-discovery: "true"
    stunner.l7mp.io/external-traffic-policy: local
spec:
  gatewayClassName: stunner-gatewayclass
  listeners:
    - name: udp-listener
      port: 3478
      protocol: TURN-UDP
