deploy/manifests/stunner-standalone-tls.yaml
# Stunner: An ingress gateway for WebRTC: TLS/DTLS in standalone mode
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stunner
spec:
  selector:
    matchLabels:
      app: stunner
  replicas: 1
  template:
    metadata:
      labels:
        app: stunner
    spec:
      containers:
      - name: stunnerd
        image: l7mp/stunnerd:latest
        imagePullPolicy: Always
        command: ["stunnerd"]
        args: ["-c", "/etc/stunnerd/stunnerd.conf"]
        volumeMounts:
          - name: stunnerd-config-volume
            mountPath: /etc/stunnerd
            readOnly: true
          - name: stunnerd-cert-volume
            mountPath: /etc/ssl/certs            
            readOnly: true
      # Uncomment this if you want to deploy a sidecar container with stunner to sniff traffic
      # - name: net-debug
      #   image: l7mp/net-debug:latest
      #   command: ["/bin/sh"]
      #   args: ["-c", "while true; do echo hello; sleep 10;done"]
      volumes:
        - name: stunnerd-config-volume
          configMap:
            name: stunnerd-conf
            optional: true
        - name: stunnerd-cert-volume
          secret:
            secretName: stunner-tls
            optional: true

---
apiVersion: v1
kind: Service
metadata:
  name: stunner-dtls
  labels:
    app: stunner
spec:
  ports:
    - port: 443
      targetPort: 443
      protocol: UDP
      name: stunner-dtls
  type: LoadBalancer
  selector:
    app: stunner

---
apiVersion: v1
kind: Service
metadata:
  name: stunner-tls
  labels:
    app: stunner
spec:
  ports:
    - port: 443
      targetPort: 443
      protocol: TCP
      name: stunner-tls
  type: LoadBalancer
  selector:
    app: stunner

---
# lock down access from the TURN server to anywhere!
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stunner-network-policy
spec:
  podSelector:
    matchLabels:
      app: stunner
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: media-plane
    ports:
    - protocol: UDP
